--- a/App/Templates/Global/featuredPosts.tpl.html
+++ b/App/Templates/Global/featuredPosts.tpl.html
@@ -3,14 +3,14 @@
 	<date-time></date-time>
 
 	<h2 class="featuredPost-heading">Featured {{postType}}</h2>
-	<ul ng-repeat="featuredPost in featuredPosts" class="featuredPost-list">
-		<li class="featuredPost" ng-show="{{featuredPost.hideInMenu}}" ng-hide="!{{featuredPost.published}}">
-			<a class="featuredPost-link">
+	<ul class="featuredPost-list">
+		<li ng-repeat="post in featured" class="featuredPost" ng-show="{{post.hideInMenu}}" ng-hide="!{{post.published}}">
+			<a class="featuredPost-link" ui-sref="{{postType == 'Posts' ? 'blog.post' : '.event'}}({postUrl:post.urlAlias})" ui-sref-active="active">
 				<div class="featuredPost-date">
-					{{featuredPost.publishDate | date:'MMMM'}}
-					<span>{{featuredPost.publishDate | date:'dd'}}</span>
+					{{post.publishDate | date:'MMMM'}}
+					<span>{{post.publishDate | date:'dd'}}</span>
 				</div>
-				<samp class="featuredPost-title">{{featuredPost.title}}</samp>
+				<samp class="featuredPost-title">{{post.title}}</samp>
 			</a>
 		</li>
 	</ul>
