--- a/App/Templates/Events/index.tpl.html
+++ b/App/Templates/Events/index.tpl.html
@@ -1,4 +1,4 @@
-﻿<article class="event" ng-hide="{{event.hideInMenu}}" ng-repeat="event in EventsCtrl.index">
+﻿<article class="event" ng-hide="{{event.hideInMenu}}" ng-repeat="event in vm.index">
 	<div class="event-photo">
 		<img ng-src="{{event.thumbFacebookMetaTag}}" />
 	</div>
